fix i'm involved align in item list

--- a/public/app/app.css
+++ b/public/app/app.css
@@ -253,6 +253,10 @@ border-radius: 0 !important;
   padding-left: 10px;
 }
 
+.padding-left-16 {
+  padding-left: 16px;
+}
+
 .padding-right-10 {
   padding-right: 10px;
 }
